cmake_minimum_required(VERSION 3.17)

set(CMAKE_CXX_STANDARD 11)

add_executable(00 main.cpp sort.h ../tool/tester.h leetcode/roman_to_int.h leetcode/longest_common_prefix.h leetcode/is_valid.h leetcode/merge_two_lists.h leetcode/remove_duplicates.h leetcode/remove_element.h leetcode/str_str.h leetcode/search_insert.h leetcode/count_and_say.h leetcode/max_sub_array.h)